new proj/src/objects/GE_ES_Risk_Factor__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bonds &amp; Guarantees - Provided by GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Approval Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash/Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing accuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Definition / Execution (No Site Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery &amp; Revenue Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute Resolution &amp; Governing Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS &amp; Site Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering / Technical Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excusable Delays / Force Majeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Currency Exchange (FX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Clauses / Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Deal/Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Indemnity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indemnity - Violations of Laws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property Indemnity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limitation of Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidated Damages (LDs) / Penalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Definition / Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule / Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension &amp; Termination</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Explanation__c</fullName>
        <label>Explanation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <description>Use the text of the Risk Factor&apos;s name.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Configurations__c</fullName>
        <label>Number of Configurations</label>
        <summaryForeignKey>GE_ES_Risk_Factor_Configuration__c.GE_ES_Risk_Factor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Name__c</fullName>
        <label>Risk Factor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field, if checked, designates the Risk Factor as TEST data (used for demoing only).  Will remove once config is migrated to production</description>
        <inlineHelpText>This field, if checked, designates the Risk Factor as TEST data (used for demoing only). Will remove once config is migrated to production</inlineHelpText>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Version_Number__c</fullName>
        <defaultValue>text(1)</defaultValue>
        <label>Version Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_HelpText__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Link__c</fullName>
        <label>Risk Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Module__c</fullName>
        <label>Risk Module</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk Factor</label>
    <listViews>
        <fullName>Limitation_of_Liability</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Risk_Factor_Name__c</columns>
        <columns>GE_ES_Explanation__c</columns>
        <columns>GE_ES_Type__c</columns>
        <columns>GE_ES_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_Category__c</field>
            <operation>equals</operation>
            <value>Limitation of Liability</value>
        </filters>
        <label>Limitation of Liability</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Risk_Factors</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Risk_Factor_Name__c</columns>
        <columns>GE_ES_Explanation__c</columns>
        <columns>GE_ES_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_ES_Risk_Factor_Name__c</field>
            <operation>equals</operation>
            <value>Suspension: GE Remedy if Buyer Suspends</value>
        </filters>
        <label>Test Risk Factors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Risk Factor Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Type</fullName>
        <active>true</active>
        <description>Type should be required for all Risk Factors</description>
        <errorConditionFormula>text(GE_ES_Type__c) == &apos;&apos;</errorConditionFormula>
        <errorDisplayField>GE_ES_Type__c</errorDisplayField>
        <errorMessage>You must specify a &quot;Type&quot; for all Risk Factors</errorMessage>
    </validationRules>
</CustomObject>